Fix deprecated constructors